@@ -4,6 +4,8 @@
 	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
 	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags
 
+	* Simplify nco_cnv_arm_time_install() prototype to exploit new compression API
+
 	* Return from nco_flt_def_wrp() with old (pre-4.7.4) netCDF libraries before encountering new API calls
 
 2022-07-08  Charlie Zender  <zender@uci.edu>
